--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "leaflet": "^1.6.0",
+    "leaflet-search": "^2.9.8",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "react": "^16.12.0",
