--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
+    "echarts": "^4.6.0",
     "leaflet": "^1.6.0",
+    "leaflet-search": "^2.9.8",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "react": "^16.12.0",
