--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "platform",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@antv/f2": "^3.5.0",
     "@testing-library/jest-dom": "^4.2.4",
