--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "echarts": "^4.6.0",
     "leaflet": "^1.6.0",
     "leaflet-search": "^2.9.8",
+    "leaflet.locatecontrol": "^0.70.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "react": "^16.12.0",
+    "react-amap": "^1.2.8",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
